Bug 362818 - If I remove an application for which an update is available, it's still listed in the updates
Summary: If I remove an application for which an update is available, it's still liste...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-08 13:54 UTC by Thomas Pfeiffer
Modified: 2016-05-11 11:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2016-05-08 13:54:39 UTC
There is an update for an application available. Because I'm not using the application anyway, I decided to uninstall it instead.
I removed it using Discover, but it's still listed in the updates tab.

Reproducible: Didn't try
Comment 1 Thomas Pfeiffer 2016-05-08 13:57:55 UTC
Addendum: The update was installed even though I had removed the application before, so I had to uninstall it again afterwards.
Comment 2 Aleix Pol 2016-05-11 11:50:15 UTC
Git commit 96b20849c754bf524946dd2c2b4405d762b446da by Aleix Pol.
Committed on 11/05/2016 at 11:45.
Pushed by apol into branch 'Plasma/5.6'.

Fetch updates after un/installing packages

M  +19   -2    libdiscover/backends/PackageKitBackend/PKTransaction.cpp
M  +4    -0    libdiscover/backends/PackageKitBackend/PKTransaction.h
M  +1    -2    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +1    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.h

http://commits.kde.org/discover/96b20849c754bf524946dd2c2b4405d762b446da