Fetch updates after un/installing packages

BUG: 362818